syntax = "proto3";
package today.expresso.grpc.user.dto;

message UserDto {

    enum Role {
        USER = 0;
        READER = 1;
        MEMBER = 2;
        WRITER = 3;
        EDITOR = 4;
        CHIEF_EDITOR = 5;
        ADMIN = 6;
        API = 7;
    }

    enum Status {
        NEW = 0;
        VERIFIED = 1;
        BLOCKED = 2;
    }

    int64 id = 1;
    string email = 2;
    repeated Role roles = 3;
    Status status = 4;
    string locale = 5;
    int32 timezone = 6;
    string reason = 7;
    int64 createdTimestamp = 8;
}

message LoginInfoDto {
    string providerId = 1;
    string providerKey = 2;
}

message UserIdentityDto {
    int64 id = 1;
    repeated UserDto.Role roles = 2;
    UserDto.Status status = 3;
    string locale = 4;
}

message PasswordInfoDto {
    string hasher = 1;
    string password = 2;
    string salt = 3;
}

message CredentialsDto {
    UserIdentityDto user = 1;
    string remoteAddress = 2;
    map<string, string> tags = 3;
}

message UserProfileDto {

    enum Sex {
        UNKNOWN = 0;
        MALE = 1;
        FEMALE = 2;
    }

    int64 user_id = 1;
    string email = 2;

    string first_name = 3;
    string last_name = 4;

    Sex sex = 5;

    int64 date_of_birth = 6;

    string country = 7;
    string city = 8;
    string postcode = 9;

    float rating = 10;
}